fix layout bug

--- a/assets/css/custom_style.css
+++ b/assets/css/custom_style.css
@@ -21,7 +21,7 @@ body {
   display: block;
   margin: 0 auto;
   max-width: 789px;
-  padding-top: 130px;
+  padding-top: 160px;
   padding-bottom: 150px;
 }
 
